Fixed dropdown on mobile

--- a/components/BackOverlay.scss
+++ b/components/BackOverlay.scss
@@ -1,7 +1,11 @@
+@import '@/styles/variables';
+
 .backoverlay {
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
+
+  z-index: $z-overlay-background;
 }
