--- a/components/Dropdown.scss
+++ b/components/Dropdown.scss
@@ -27,6 +27,7 @@
     margin-top: 8px;
 
     position: absolute;
+    z-index: $z-overlay;
 
     background: #fff;
     box-shadow: 0px 24px 40px rgba(21, 26, 37, 0.1);
